# Hackles

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  Test_app.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
hackles/: __init__.py  __main__.py
hackles/abuse/: __init__.py  loader.py  printer.py
hackles/abuse/templates/: acl.yaml  adcs.yaml  adcsesc11.yml  adcsesc8.yml  asreproasting.yml  azure.yaml  coercion.yaml  dcsync.yml  genericall.yml  genericwrite.yml  goldencert.yml  gpo.yaml  groups.yaml  kerberoasting.yml  lateral.yaml  passwordneverexpires.yml  readlapspassword.yml
hackles/api/: __init__.py  auth.py  client.py  config.py  ingest.py
hackles/cli/: __init__.py  completion.py  formatter.py  main.py  parser.py
hackles/core/: __init__.py  bloodhound.py  config.py  constants.py  cypher.py  scoring.py  utils.py
hackles/display/: __init__.py  banner.py  colors.py  paths.py  report.py  summary.py  tables.py
hackles/queries/: __init__.py  base.py
hackles/queries/acl/: __init__.py  acl_abuse.py  add_allowed_to_act.py  add_member.py  addself_privileged.py  all_extended_rights.py  chained_acl_abuse.py  container_acl_abuse.py  domain_users_dangerous_acls.py  force_change_password.py  generic_all.py  generic_write.py  gpo_control_privileged.py  gpo_interesting_names.py  gpos_dc_ou.py  laps_readers.py  non_admin_dcsync.py  non_admin_owners.py  owns_relationships.py  schema_config_control.py  shadow_admins.py  top_controllers.py  unresolved_sids.py  write_account_restrictions.py  write_dacl.py  write_owner.py  write_spn_paths.py
hackles/queries/adcs/: __init__.py  adcs_esc11.py  adcs_esc8.py  adcs_escalation_paths.py  adcs_summary.py  any_purpose_templates.py  esc10_weak_mapping.py  esc13_issuance_policy.py  esc15_vulnerable.py  esc1_vulnerable.py  esc3_enrollment_agent.py  esc4_template_acl.py  esc5_pki_object.py  esc6_san_flag.py  esc9_no_security_ext.py  golden_cert_paths.py  manage_ca.py  manage_certificates.py  vulnerable_enrollment.py
hackles/queries/azure/: __init__.py  aad_connect_servers.py  aadc_server_paths.py  azure_ad_connect_accounts.py  azure_ad_connect_dcsync.py  azure_sp_onprem_admin.py  azure_spns.py  hybrid_attack_surface.py  privileged_sync_targets.py  sync_account_privesc.py
hackles/queries/credentials/: __init__.py  asrep_roastable.py  dcsync.py  dcsync_principals.py  getchangesall_only.py  gmsa_readers.py  kerberoastable.py  kerberoastable_stale_passwords.py  kerberoastable_with_admin.py  never_changed_password.py  passwd_notreqd.py  passwords_in_description.py  pwd_never_expires_admins.py  reversible_encryption.py  service_accounts_admin.py  service_accounts_delegation.py  service_accounts_interactive.py  shadow_credentials.py  sid_history.py  userpassword_attribute.py
hackles/queries/delegation/: __init__.py  coercion_chain.py  computer_delegation.py  constrained_delegation.py  constrained_delegation_dangerous.py  delegatable_admins.py  delegation_chains.py  rbcd.py  rbcd_targets.py  s4u2self_unconstrained.py  unconstrained_coercion.py  unconstrained_delegation.py  unconstrained_krbtgt_paths.py
hackles/queries/domain/: __init__.py  azuread_sso.py  cross_domain_ownership.py  domain_admins.py  (+11 more)
scripts/: check.sh
tests/: conftest.py  test_abuse_loader.py  test_bloodhound.py  test_cli.py  test_config.py  test_queries.py  test_utils.py
(+78 files in other folders)
